# generic-k8s-webhook

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: publish-artifacts.yaml  publish-to-ghcr.yaml  test-pr.yaml
docs/: contributor-guide.md  operators-reference.md
examples/: 1.yaml  check-namespace-sa.yaml  inject-node-affinity.yaml
generic_k8s_webhook/: config_parser.py  http_server.py  jsonpatch_helpers.py  main.py  operators.py  operators_old.py  utils.py  webhook.py
generic_k8s_webhook/config_parser/: action_parser.py  entrypoint.py  expr_parser.py  jsonpatch_parser.py  operator_parser.py  webhook_parser.py
scripts/: check-pyproject.sh  format-code.sh  insert-version-pyproject.sh  run-all-tests.sh
tests/: conditions_test.py  conditions_test.yaml  config_parser_test.py  end2end_test.py  http_server_test.py  jsonpatch_helpers_test.py  jsonpatch_test.py  jsonpatch_test.yaml  operators_test.py  opetators_test.py  pytest.ini  test_examples.py  test_utils.py
tests/http_server_test_data/: test_case_1.yaml  test_case_2.yaml  test_case_3.yaml  test_case_4.yaml
tests/tls/: cert.pem  key.pem
tests/webhook_configs/: config1.yaml
