[tool.poetry]
name = "generic-k8s-webhook"
version = "0.1.0"
description = "Configurable webhook that can implement multiple validators and mutators using a simple yaml config file"
authors = ["jordi <jordipiqueselles@gmail.com>"]
license = "Apache License"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
