[tool.poetry]
name = "generic_k8s_webhook"
version = "0.1.0"
description = "Configurable webhook that can implement multiple validators and mutators using a simple yaml config file"
authors = ["jordi <jordipiqueselles@gmail.com>"]
license = "Apache License"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
jsonpatch = "^1.33"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
autopep8 = "^2.0.2"
pytest-timeout = "^2.1.0"

[tool.poetry.scripts]
my-script = "generic_k8s_webhook.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
