[tool.poetry]
name = "generic_k8s_webhook"
# This is substituted in the publish-artifacts pipeline by the current git tag
version = "0.0.0"
description = "Configurable webhook that can implement multiple validators and mutators using a simple yaml config file"
authors = ["jordi <jordipiqueselles@gmail.com>"]
license = "Apache License"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0"
jsonpatch = "^1.33"
requests = "^2.31.0"
lark = "^1.1.7"

[tool.poetry.scripts]
generic_k8s_webhook = "generic_k8s_webhook.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-timeout = "^2.1.0"
isort = "^5.12.0"
black = "^23.3.0"
pylint = "^2.17.4"

[tool.isort]
line_length = 120

[tool.black]
line-length = 120

[tool.pylint]
max-line-length = 120
disable = """invalid-name, \
logging-fstring-interpolation, \
missing-module-docstring, \
missing-class-docstring, \
missing-function-docstring, \
too-few-public-methods, \
fixme, \
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
